plugins {
    id 'java'
}

sourceCompatibility = '1.11'
targetCompatibility = '1.11'
version = '1.2.1'

dependencies {
    implementation 'org.assertj:assertj-core:3.12.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.0'
}

test {
    // enable JUnit Platform (a.k.a. JUnit 5) support
    useJUnitPlatform()

    // set a system property for the test JVM(s)
    //    systemProperty 'some.prop', 'value'

    // explicitly include or exclude tests
    //    include 'org/foo/**'
    //    exclude 'org/boo/**'

    // show standard out and standard error of the test JVM(s) on the console
//    testLogging.showStandardStreams = true
//
//    // set heap size for the test JVM(s)
//    minHeapSize = "128m"
//    maxHeapSize = "512m"
//
//    // set JVM arguments for the test JVM(s)
//    jvmArgs '-XX:MaxPermSize=256m'
//
//    // listen to events in the test execution lifecycle
//    beforeTest { descriptor ->
//        logger.lifecycle("Running test: " + descriptor)
//    }
//
//    // Fail the 'test' task on the first test failure
//    failFast = true
//
//    // listen to standard out and standard error of the test JVM(s)
//    onOutput { descriptor, event ->
//        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
//    }
}

repositories {
    jcenter()
}